# lrimmich

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: _config.yml  alternatives.md  commands.md  configuration.md  contributing.md  getting-started.md  how-it-works.md  index.md  installation.md  troubleshooting.md  watch-and-service.md
src/lrimmich/: __init__.py  adopt.py  app.py  catalog.py  cli.py  commands.py  config.py  doctor.py  immich.py  notify.py  orchestrator.py  resolver.py  sample_config.toml  service.py  state.py  watch.py
src/lrimmich/clients/: catalog.py  immich.py  queries.py  state.py
src/lrimmich/sync/: albums.py  captions.py  color_labels.py  context.py  covers.py  favorites.py  keywords.py  orchestrator.py  ratings.py  rejects.py  stacks.py  summary.py  tags.py
src/lrimmich/utils/: adopt.py  config.py  doctor.py  logging.py  notify.py  resolver.py  sample_config.toml
tests/: conftest.py  test_adopt.py  test_albums.py  test_captions.py  test_catalog.py  test_cli.py  test_color_labels.py  test_config.py  test_covers.py  test_doctor.py  test_favorites.py  test_immich.py  test_integration.py  test_keywords.py  test_notify.py  test_orchestrator.py  test_queries.py  test_ratings.py  test_rejects.py  test_resolver.py  test_service.py  test_stacks.py  test_state.py  test_tags.py  test_watch.py
tests/fixtures/: catalog_factory.py
