[project]
name = "lrimmich"
dynamic = ["version"]
description = "Sync Lightroom Classic catalogs to Immich"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Håvard Nordhus Kråkenes" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[project.urls]
Homepage = "https://github.com/haavardnk/lrimmich"
Repository = "https://github.com/haavardnk/lrimmich"
Issues = "https://github.com/haavardnk/lrimmich/issues"

[project.scripts]
lrimmich = "lrimmich.app:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.uv]
dev-dependencies = [
    "pyrefly>=1.0.0",
    "pytest>=9.0.3",
    "respx>=0.23.1",
    "ruff>=0.15.13",
]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyrefly]
project_includes = ["src"]
python_interpreter = ".venv/bin/python"
